# agent-mail-cli

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
hooks/: check_inbox.py  multi_agent_guidance.py  post_send.py  session_heartbeat.py  session_start.py
scripts/: install.sh
skills/agent-mail/: SKILL.md
src/agent_mail_cli/: __init__.py  cli.py  client.py
tests/: test_cli.py  test_cli_server_integration.py  test_client.py  test_hooks_integration.py  test_hooks_unit.py
